# using-opencv

./: .gitignore  README.md
cc/: CMakeLists.txt  blurring.cc  build-linux.sh  canny.cc  contour.cc  convex.cc  dft_filters.cc  ellipse.cc  fitshapes.cc  grabcut.cc  gradient.cc  helper.cpp  helper.hpp  hough_transformation.cc  image_dft.cc  matching_template.cc  morphology.cc  multicamera.cc  pyramids.cc  shapes.cc  videorw.cc  watershed.cc
mnist/: generate.py
py/: bitwise.py  color_space.py  face_haar.py  face_recognition.py  fft_high_pass.py  helpers.py  image_dft.ipynb  image_dft.py  image_fft.py  kmeans.py  knn.py  svm.py  threshold.py  transforms.py
